[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docu"
version = "0.1.0"
description = "A simple Agent tool for processing documents"
authors = [{ name = "Anupam Reddy" }]
dependencies = []

[project.scripts]
docu = "document_executor:document_executor"
